<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_login_background" />

    <TextView
        android:id="@+id/tv_register_form"
        style="@style/white_text_black_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/lbl_register_form"
        android:textColor="@color/white_full"
        android:textSize="@dimen/text_regular_3x" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_register_form"
        android:layout_marginLeft="@dimen/margin_xlarge"
        android:layout_marginRight="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_medium"
        android:textColorHint="@color/white_full">

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_first_name"
            android:inputType="text"
            android:textColorHint="@color/accent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_second_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_first_name"
        android:layout_marginLeft="@dimen/margin_xlarge"
        android:layout_marginRight="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_medium"
        android:textColorHint="@color/white_full">

        <EditText
            android:id="@+id/et_second_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_second_name"
            android:inputType="text"
            android:textColorHint="@color/accent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_second_name"
        android:layout_marginLeft="@dimen/margin_xlarge"
        android:layout_marginRight="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_medium"
        android:textColorHint="@color/white_full">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_mail"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/accent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_email"
        android:layout_marginLeft="@dimen/margin_xlarge"
        android:layout_marginRight="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_medium"
        android:textColorHint="@color/white_full">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_phone_number"
            android:inputType="phone"
            android:textColorHint="@color/accent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_phone"
        android:layout_marginLeft="@dimen/margin_xlarge"
        android:layout_marginRight="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_medium"
        android:textColorHint="@color/white_full">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_password"
            android:inputType="textPassword"
            android:textColorHint="@color/accent" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_password"
        android:layout_marginLeft="@dimen/margin_xlarge"
        android:layout_marginRight="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_medium"
        android:textColorHint="@color/white_full">

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_confirm_passowrd"
            android:inputType="textPassword"
            android:textColorHint="@color/accent" />
    </android.support.design.widget.TextInputLayout>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_confirm_password"
        android:text="@string/lbl_agree_to"
        android:layout_alignLeft="@id/input_confirm_password"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:textColor="@color/white_full"
        android:id="@+id/checkbox_agree"
        style="@style/white_text_black_border"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:layout_below="@+id/checkbox_agree"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_alignLeft="@id/checkbox_agree"
        android:layout_alignRight="@id/input_confirm_password"
        android:text="Sign Up"
        android:textColor="@color/white_full"
        android:background="@color/primary"
        android:textAllCaps="false"
        android:foreground="@drawable/ripple_white"
        />

</RelativeLayout>