<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/img_login_background" />

        <TextView
            android:id="@+id/tv_login_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="Login Form"
            android:textColor="@color/white_full"
            android:textSize="@dimen/text_regular_3x" />

        <ImageView
            android:id="@+id/iv_user_login"
            android:layout_width="@dimen/margin_for_user_pic"
            android:layout_height="@dimen/margin_for_user_pic"
            android:layout_below="@+id/tv_login_form"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:src="@drawable/img_rounded_user" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_email_or_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_user_login"
            android:layout_marginLeft="@dimen/margin_xlarge"
            android:layout_marginRight="@dimen/margin_xlarge"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:textColorHint="@color/white_full">

            <EditText
                android:id="@+id/et_email_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mobile or Email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/accent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_email_or_phone"
            android:layout_marginLeft="@dimen/margin_xlarge"
            android:layout_marginRight="@dimen/margin_xlarge"
            android:layout_marginTop="@dimen/margin_medium"
            android:textColorHint="@color/white_full">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColorHint="@color/accent" />
        </android.support.design.widget.TextInputLayout>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_remember_me"
            android:layout_below="@+id/input_password"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_xlarge"
            android:textColor="@color/white_full"
            android:id="@+id/checkbox_remember"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_password"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_xlarge"
            android:text="@string/lbl_forgot_password"
            android:textColor="@color/white_full"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:layout_below="@+id/checkbox_remember"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_marginLeft="@dimen/margin_medium_2"
            android:layout_marginRight="@dimen/margin_medium_2"
            android:text="Login"
            android:textColor="@color/white_full"
            android:background="@color/primary"
            android:textAllCaps="false"
            android:foreground="@drawable/ripple_white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_create_account"
            android:text="@string/lbl_create_new_account"
            android:layout_below="@+id/btn_login"
            android:fontFamily="serif"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white_full"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Or"
            android:fontFamily="serif"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_below="@id/tv_create_account"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white_full"
            android:id="@+id/tv_or"
            />
        <ImageView
            android:layout_width="@dimen/margin_xlarge"
            android:layout_height="@dimen/margin_xlarge"
            android:src="@drawable/img_google_logo"
            android:layout_below="@+id/tv_or"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:scaleType="centerCrop"
            />

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>